--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
           deps: |
             Renegades-FlashlightToggle@1.5.0
             Jamil-Corporate_Restructure@1.0.6
-            nyhoot-ShipLoot@1.1.0
+            tinyhoot-ShipLoot@1.1.0
             Renegades-WalkieUse@1.5.0
             Monkeytype-HideChat@1.0.0
             RickArg-Helmet_Cameras@2.1.5
