--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -27,4 +27,4 @@ jobs:
             Renegades-WalkieUse@1.5.0
             Monkeytype-HideChat@1.0.0
             RickArg-Helmet_Cameras@2.1.5
-            
+            Treyotech-Treys_Health_Text@1.3.1
